--- a/spectator/index.html
+++ b/spectator/index.html
@@ -1,24 +1,105 @@
 <html>
     <body>
-        <canvas id="canvas" width="1200" height="800" style="border:1px solid #000000;">
+        <canvas id="canvas" width="1200" height="800" style="border:1px solid #000000; background: #000;">
         </canvas>
 
         <script>
             var c = document.getElementById("canvas");
             var ctx = c.getContext("2d");
-            ctx.beginPath();
-            ctx.moveTo(75, 50);
-            ctx.lineTo(100, 75);
-            ctx.lineTo(100, 25);
-            ctx.fill();
 
             const socket = new WebSocket('ws://localhost:3000/spectate');
             socket.addEventListener('open', function (event) {
                 console.log("connected!");
             });
 
+            class Ship {
+                constructor(x, y, theta) {
+                    this.x = x;
+                    this.y = y;
+                    this.theta = theta;
+                }
+
+                move(x, y) {
+                    this.x = x;
+                    this.y = y;
+                }
+
+                rotate(theta) {
+                    this.theta = theta;
+                }
+
+                draw(ctx) {
+                    ctx.translate(this.x, this.y);
+                    ctx.rotate(this.theta);
+                    ctx.beginPath();
+                    ctx.moveTo(-20, -25);
+                    ctx.lineTo(0, 25);
+                    ctx.lineTo(20, -25);
+                    ctx.lineTo(-20, -25);
+                    ctx.fill();
+                    ctx.stroke();
+                    ctx.setTransform(1, 0, 0, 1, 0, 0);
+                }
+            }
+
+            class Bullet {
+                constructor(x, y, theta) {
+                    this.x = x;
+                    this.y = y;
+                    this.theta = theta;
+                }
+
+                move(x, y) {
+                    this.x = x;
+                    this.y = y;
+                }
+
+                rotate(theta) {
+                    this.theta = theta;
+                }
+
+                draw(ctx) {
+                    ctx.translate(this.x, this.y);
+                    ctx.rotate(this.theta);
+                    ctx.beginPath();
+                    ctx.moveTo(-5, -5);
+                    ctx.lineTo(0, 5);
+                    ctx.lineTo(5, -5);
+                    ctx.lineTo(-5, -5);
+                    ctx.stroke();
+                    ctx.setTransform(1, 0, 0, 1, 0, 0);
+                }
+            }
+
+            var ships = [];
+            var bullets = [];
+            for (var i=0; i<20; i++) {
+                ships.push(new Ship(Math.random() * c.width, Math.random() * c.height, 0));
+            }
+
+            for (var i=0; i<20; i++) {
+                bullets.push(new Bullet(Math.random() * c.width, Math.random() * c.height, 0));
+            }
+
             // Listen for messages
             socket.addEventListener('message', function (event) {
+                ctx.clearRect(0, 0, c.width, c.height);
+                ctx.strokeStyle = "#ffffff";
+                ctx.lineWidth = 1;
+                ctx.lineCap = "square";
+                ctx.lineJoin = "bevel";
+                for (let bullet of bullets) {
+                    bullet.rotate(bullet.theta += 0.3);
+                    bullet.draw(ctx);
+                }
+
+                ctx.lineWidth = 3;
+                for (let ship of ships) {
+                    ship.move(ship.x + Math.random(), ship.y + Math.random());
+                    ship.rotate(ship.theta + (Math.random() - 0.5)/5);
+                    ship.draw(ctx);
+                }
+
                 console.log('Message from server ', event.data);
             });
         </script>
