also draw bullets

--- a/spectator/index.html
+++ b/spectator/index.html
@@ -45,10 +45,12 @@
             }
 
             class Bullet {
-                constructor(x, y, theta) {
-                    this.x = x;
-                    this.y = y;
-                    this.theta = theta;
+                constructor(obj) {
+                    this.id = obj.id;
+                    this.player_id = obj.player_id;
+                    this.x = obj.x;
+                    this.y = obj.y;
+                    this.angle = obj.angle;
                 }
 
                 move(x, y) {
@@ -73,20 +75,11 @@
                 }
             }
 
-            // var ships = [];
-            // var bullets = [];
-            // for (var i=0; i<20; i++) {
-            //     ships.push(new Ship(Math.random() * c.width, Math.random() * c.height, 0));
-            // }
-
-            // for (var i=0; i<20; i++) {
-            //     bullets.push(new Bullet(Math.random() * c.width, Math.random() * c.height, 0));
-            // }
-
             // Listen for messages
             socket.addEventListener('message', function (event) {
                 let json = JSON.parse(event.data);
                 if (json.e === "state") {
+                    // console.log(json.data);
                     const data = json.data;
 
                     ctx.clearRect(0, 0, c.width, c.height);
@@ -96,23 +89,12 @@
                     ctx.lineJoin = "bevel";
 
                     for (const player of data.players) {
-                        const ship = new Ship(player);
-                        ship.draw(ctx);
+                        new Ship(player).draw(ctx);
                     }
 
-                    // console.log(`drew ${data.players.length} ships`);
-                    // for (let bullet of bullets) {
-                    //     bullet.rotate(bullet.theta += 0.3);
-                    //     bullet.draw(ctx);
-                    // }
-
-                    // ctx.lineWidth = 3;
-                    // for (let ship of ships) {
-                    //     ship.move(ship.x + Math.random(), ship.y + Math.random());
-                    //     ship.rotate(ship.theta + (Math.random() - 0.5)/5);
-                    //     ship.draw(ctx);
-                    // }
-
+                    for (const bullet of data.bullets) {
+                        new Bullet(player).draw(ctx);
+                    }
                 }
             });
         </script>
