--- a/spectator/index.html
+++ b/spectator/index.html
@@ -17,7 +17,7 @@
                 margin: 0;
                 padding: 0;
                 border: 0;
-                font-size: 120%;
+                font-size: 100%;
                 font: inherit;
                 vertical-align: baseline;
                 overflow:hidden;
@@ -35,6 +35,7 @@
             }
 
             #scoreboard {
+                font-size: 18px;
                 display: block;
                 position: absolute;
                 top: 10;
@@ -140,7 +141,7 @@
                     // draw team name
                     ctx.rotate(-this.angle + Math.PI / 2.0); // please don't ask me about this math
                     const oldFill = ctx.fillStyle;
-                    ctx.font = '12px monospace';
+                    ctx.font = '16px monospace';
                     ctx.textAlign = 'left';
                     ctx.textBaseline = 'top';
                     let textMeasurements = ctx.measureText(team_names[this.id]);
